# animula-zephyr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Kconfig  Makefile  README.md  build.sh  dfu-flash.sh  prj.conf
boards/: animula_alonzo.overlay  lambdachip_alonzo.conf  lambdachip_alonzo.overlay
lambdachip_alonzo/: Kconfig.board  Kconfig.defconfig  lambdachip_alonzo.dts  lambdachip_alonzo.yaml  lambdachip_alonzo_defconfig  pinmux.c
lambdachip_alonzo/doc/: index.rst
lambdachip_alonzo/support/: openocd.cfg
src/: main.c
